@@ -1,6 +1,7 @@
 7/12/17
  - added gHit, gSensitiveDetector classes
  - associating gvolume with GSensitiveDetector
+ - added default softwareVersion handling
 
 7/11/17
  - starting gtouchable
